adding footer with some fixes

--- a/src/assets/i18n/sw.json
+++ b/src/assets/i18n/sw.json
@@ -1,5 +1,5 @@
 {
-  "SectorsFeelingsTitle": "Co2-utgångar För Sektorer",
+  "SectorsFeelingsTitle": "Sektorernas Totala Koldioxidutsläpp",
   "SectorsTable": "Sektorer Tabell",
   "Dashboard": "Instrumentbräda",
   "Search": "Sök",
